# dropkick

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
cdk/construct/: .eslintrc.json  health.handler.ts  health.ts  index.ts  package-lock.json  package.json  tsconfig.json  util.ts
cdk/example/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/example/lib/: stack.ts
docs/: aws.md  getting-started.md  nix-dev.md  testing-dropkick-changes.md
examples/beachball/: Cargo.toml
examples/beachball/cdk/: package-lock.json  package.json
examples/beachball/cdk/lib/: cdk-stack.ts
examples/beachball/src/: main.rs
src/: build.rs  command.rs  config.nix  context.rs  distro.rs  dropshot.service  ec2.rs  kpartx.rs  lib.rs  main.rs  mount.rs  nix.rs  oxide.rs  progress.rs  tempdir.rs
src/fs/: ext4.zst  generate.sh
src/keys/: mod.rs  ubuntu.asc
src/nix/: config.nix  flake.nix  mod.rs
src/nix/caddy/: default.nix  go.mod  go.sum  main.go
templates/: nixos-config.nix
