[package]
name = "dropkick"
version = "0.2.0"
edition = "2021"
publish = false

[profile.release]
debug = 1

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aws-config = "0.54.1"
aws-sdk-cloudformation = "0.24.0"
aws-sdk-ebs = "0.24.0"
aws-sdk-ec2 = "0.24.0"
camino = "1.1.6"
cargo_metadata = "0.15.4"
clap = { version = "4.4.11", features = ["derive"] }
coldsnap = "0.5.1"
env_logger = "0.10.1"
fs-err = "2.11.0"
indicatif = "0.17.7"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
zstd = "0.12.4"
