[package]
name = "dropkick"
version = "0.2.0"
edition = "2021"
publish = false

[profile.release]
debug = 1

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
aws-config = "1.0.3"
aws-sdk-cloudformation = "1.7.0"
aws-sdk-ebs = "1.6.0"
aws-sdk-ec2 = "1.8.0"
camino = "1.1.6"
cargo_metadata = "0.18.1"
clap = { version = "4.4.11", features = ["derive"] }
coldsnap = { git = "https://github.com/awslabs/coldsnap" }
env_logger = "0.10.1"
fs-err = "2.11.0"
indicatif = "0.17.7"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
zstd = "0.13.0"
