[package]
name = "beachball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot = "0.9.0"
reqwest = "0.11.22"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }

[package.metadata.dropkick]
nixpkgs = [ "pkg-config", "openssl" ]
port = 8000
